Mon Mar 16 13:23:53 1998  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* io.c (io_check_closed): check for `fptr->f2 == NULL'.

	* io.c (io_fptr_close): ditto.

Mon Mar 16 14:11:06 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* class.c (ins_methods_i): needed to consider NOEX_UNDEF.

Fri Mar 13 13:49:24 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_02.

	* object.c (mod_clone): need to dups constants and instance
	  variables.

	* eval.c (rb_eval): forgot to initialize body for NODE_DEFS.

	* eval.c (rb_eval): retrieve self from calling frame, since self
	  changes sometimes.

	* env.h (FRAME): need to save self in the calling frame.

	* io.c (f_gets_method): rs should be initialized by RS.

Thu Mar 12 15:33:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_01.

	* range.c (range_s_new): check values by `first <= last'.

	* parse.y (lastline_set): fixed offset for $_ and $~ in the local
	  variable space.

Wed Mar 11 02:14:17 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (io_gets): handle normal case specially for speed.

	* eval.c (rb_disable_super): function to disable superclass's
	  method explicitly.

	* eval.c (rb_eval): inherits previous method definition's
	  NOEX_UNDEF-ness, if exists.

	* class.c (rb_define_method): disables superclass's overriding
 	  method by default.

Wed Mar 11 01:40:48 1998  MAEDA shugo  <shugo@po.aianet.ne.jp>

	* numeric.c (flo_gt,etc.): do not depend on `<=>', to handle NaN.

Tue Mar 10 00:03:24 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.c (load_file): understands multiple options in #! line.

	* regex.c (re_compile_pattern): support for [:alpha:] etc.

Mon Mar  9 16:53:51 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.h (GetOpenFile): embed io_check_closed in GetOpenFile.

	* sprintf.c (f_sprintf): zero padding failed for negative
	  integers.

	* sprintf.c (remove_sign_bits): failed to remove some bits.
